formatted code in cfg and s files

--- a/cart128_32/cart128_32.cfg
+++ b/cart128_32/cart128_32.cfg
@@ -5,14 +5,14 @@ SYMBOLS {
 MEMORY {
     # Zero page
     ZP:       start = $0002, size = $001A, type = rw, define = yes;
-    
+
     # C128 32K cartridge ROM area 
     # MID bank: $8000-$BFFF (16K)
     ROMLO:    start = $8000, size = $4000, file = %O, fill = yes, define = yes;
     # HIGH bank: $C000-$FEFF (16K minus MMU hole)
     # Note: $FF00-$FF04 is MMU hole and cannot be used
     ROMHI:    start = $c000, size = $3f00, file = %O, fill = yes, define = yes;
-    
+
     # Available RAM areas in C128 (limited when using 32K cart)
     RAM:      start = $1c00, size = $6400, type = rw, define = yes;
 }
@@ -20,26 +20,29 @@ MEMORY {
 SEGMENTS {
     # Cartridge startup code - must be at $8000
     STARTUP:  load = ROMLO, type = ro, start = $8000;
-    
+
     # Low ROM segments (MID bank $8000-$BFFF)
     LOWCODE:  load = ROMLO, type = ro, optional = yes;
     CODE:     load = ROMLO, type = ro;
     RODATA:   load = ROMLO, type = ro;
     INIT:     load = ROMLO, type = ro, define = yes, optional = yes;
-    
+
     # High ROM segments (HIGH bank $C000-$FEFF)
     HICODE:   load = ROMHI, type = ro, optional = yes;
     HIRODATA: load = ROMHI, type = ro, optional = yes;
-    
+
     # Data segments
     DATA:     load = ROMLO, run = RAM, type = rw, define = yes;
     ONCE:     load = ROMLO, type = ro, define = yes, optional = yes;
     BSS:      load = RAM, type = bss, define = yes;
     HEAP:     load = RAM, type = bss, optional = yes;
-    
+
+    # High RAM data (optional)
+    # BSSHI:    load = HIRAM, type = bss, define = yes, optional = yes;
+
     # Zero page
     ZEROPAGE: load = ZP, type = zp;
-    
+
     # Padding to fill cartridges
     PADLO:    load = ROMLO, type = ro, start = $bfff;
     PADHI:    load = ROMHI, type = ro, start = $feff;
@@ -59,4 +62,3 @@ FEATURES {
             label = __INTERRUPTOR_TABLE__,
             count = __INTERRUPTOR_COUNT__;
 }
-
