--- a/cart128_32/cart128_32.cfg
+++ b/cart128_32/cart128_32.cfg
@@ -1,51 +1,45 @@
 SYMBOLS {
-    __STACKSIZE__: value = $0800, type = weak; # 2k stack
+    __STACKSIZE__: value = $0800, type = weak;
 }
 
 MEMORY {
-    # Zero page
     ZP:       start = $0002, size = $001A, type = rw, define = yes;
 
-    # C128 32K cartridge ROM area 
-    # MID bank: $8000-$BFFF (16K)
+    # Split 32K ROM into two banks (avoid MMU registers at $FF00–$FF04)
     ROMLO:    start = $8000, size = $4000, file = %O, fill = yes, define = yes;
-    # HIGH bank: $C000-$FEFF (16K minus MMU hole)
-    # Note: $FF00-$FF04 is MMU hole and cannot be used
-    ROMHI:    start = $c000, size = $3f00, file = %O, fill = yes, define = yes;
+    ROMHI:    start = $C000, size = $3F00, file = %O, fill = yes, define = yes;
 
-    # Available RAM areas in C128 (limited when using 32K cart)
-    RAM:      start = $1c00, size = $6400, type = rw, define = yes;
+    # Final padding to make the image exactly 32KB
+    PADTOP:   start = $FF00, size = $0100, file = %O, fill = yes;
+
+    RAM:      start = $1C00, size = $6400, type = rw, define = yes;
 }
 
 SEGMENTS {
-    # Cartridge startup code - must be at $8000
     STARTUP:  load = ROMLO, type = ro, start = $8000;
 
-    # Low ROM segments (MID bank $8000-$BFFF)
     LOWCODE:  load = ROMLO, type = ro, optional = yes;
+    INIT:     load = ROMLO, type = ro, define = yes, optional = yes;
     CODE:     load = ROMLO, type = ro;
     RODATA:   load = ROMLO, type = ro;
-    INIT:     load = ROMLO, type = ro, define = yes, optional = yes;
 
-    # High ROM segments (HIGH bank $C000-$FEFF)
+    DATA:     load = ROMLO, run = RAM, type = rw, define = yes;
+    ONCE:     load = ROMLO, type = ro, define = yes, optional = yes;
+
+    # Optional extra ROM segments for the upper 16KB (can shift rodata here)
     HICODE:   load = ROMHI, type = ro, optional = yes;
     HIRODATA: load = ROMHI, type = ro, optional = yes;
 
-    # Data segments
-    DATA:     load = ROMLO, run = RAM, type = rw, define = yes;
-    ONCE:     load = ROMLO, type = ro, define = yes, optional = yes;
     BSS:      load = RAM, type = bss, define = yes;
     HEAP:     load = RAM, type = bss, optional = yes;
+    ZEROPAGE: load = ZP,  type = zp;
 
-    # High RAM data (optional)
-    # BSSHI:    load = HIRAM, type = bss, define = yes, optional = yes;
+    # Fills to the end of each ROM section
+    PADLO:    load = ROMLO, type = ro, start = $BFFF;
+    PADHI:    load = ROMHI, type = ro, start = $FEFF;
 
-    # Zero page
-    ZEROPAGE: load = ZP, type = zp;
-
-    # Padding to fill cartridges
-    PADLO:    load = ROMLO, type = ro, start = $bfff;
-    PADHI:    load = ROMHI, type = ro, start = $feff;
+    # New top-of-ROM padding to safely fill final 256 bytes
+    PADTOP:   load = PADTOP, type = ro, start = $FF00;
 }
 
 FEATURES {
