Changed theme, fixed minor UI bugs, replaced data sent with bit banging D700

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "makefile.configureOnOpen": false
+    "makefile.configureOnOpen": false,
+    "files.associations": {
+        "sid_info_screen.h": "c",
+        "c128.h": "c",
+        "peekpoke.h": "c",
+        "_vdc.h": "c"
+    }
 }
